upcxx-2023.9.0/test/neg/neg-rpc17.errc
Deserialized type of rpc return value must be MoveConstructible.
